--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "modules-abi",
+	"name": "@antigravities/modules-abi",
 	"version": "1.1.0",
 	"description": "Get ABI and version for common node runtimes (node, NW.js, Electron)",
 	"main": "dist/src/index.cjs",
